--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "@react-three/drei": "^9.111.1",
     "@react-three/fiber": "^8.17.5",
     "framer-motion": "^11.3.28",
