--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "popmotion": "^11.0.5",
     "react": "^18",
     "react-dom": "^18",
-    "three": "^0.167.1"
+    "three": "^0.167.1",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/node": "^20",
