--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@react-three/drei": "^9.111.1",
     "@react-three/fiber": "^8.17.5",
+    "@supabase/ssr": "^0.5.1",
+    "@supabase/supabase-js": "^2.45.2",
     "framer-motion": "^11.3.28",
     "next": "14.2.5",
     "popmotion": "^11.0.5",
