--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^8.17.5",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.2",
+    "@toast-ui/react-editor": "^3.2.3",
     "framer-motion": "^11.3.28",
     "next": "14.2.5",
     "popmotion": "^11.0.5",
